fix overflow hidden

--- a/css/style.css
+++ b/css/style.css
@@ -2142,14 +2142,10 @@ body.admin-bar .header-menu-area.sticky_menu {
   margin-bottom: 34px; }
   .post-template-default.postid-150 .blog-details-wrapper .single-post-item .post-content .wp-block-group.is-layout-constrained:last-child {
     border: 1px solid #000; }
-.post-template-default.postid-51 .blog-details-wrapper .post-comments {
-  margin-top: 94px; }
 .post-template-default.postid-51 .blog-details-wrapper .single-post-item .post-content {
   margin-bottom: 25px; }
   .post-template-default.postid-51 .blog-details-wrapper .single-post-item .post-content p:last-child {
     margin-bottom: 0; }
-.post-template-default.postid-34 .blog-details-wrapper .comment-respond {
-  margin-top: 80px; }
 
 @-webkit-keyframes MovefadeUp {
   0% {
